--- a/login.html
+++ b/login.html
@@ -23,16 +23,13 @@
       <label for="email" class="form-label">Email*</label>
       <input type="email" class="bottomLine form-control" autocomplete="" required name="email" id="email"
         placeholder="name@example.com">
-        <div class="invalid-feedback">
-          Please choose a username.
-        </div>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password*</label>
       <input type="password" required class="bottomLine form-control" autocomplete="" name="password" placeholder="********" id="password" />
     </div>
     <div class="my-5 btn">
-      <button type="button" onclick="signInFormFunc()" id="in" class="btn btn-primary">Sign in</button>
+      <button type="submit" id="in" class="btn btn-primary">Sign in</button>
       <a href="./signup.html"><button type="button" id="up" class="btn btn-primary">Sign up</button></a>
     </div>
   </form>
@@ -57,7 +54,7 @@
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
     crossorigin="anonymous"></script> -->
 
-  <script src="./javascript/index.js"></script>
+  <script src="./javascript/login.js"></script>
 </body>
 
 </html>
