--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
   <div class="container">
     <h1 class="my-3 mx-3">Sign Up</h1>
     <hr>
-    <form id="signUpForm" onsubmit="signUpFormFunc()" class="container">
+    <form id="signUpForm" class="container">
       <div class="mb-3 my-5">
         <label for="usernames" class="form-label">Full name*</label>
         <input type="text" class="bottomLine form-control" autocomplete="" name="fullNames" id="fullNames"
@@ -56,7 +56,7 @@
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
     crossorigin="anonymous"></script> -->
 
-    <script src="./javascript/index.js"></script>
+    <script src="./javascript/signup.js"></script>
   </body>
 
 </html>
