--- a/ownerview.html
+++ b/ownerview.html
@@ -122,9 +122,31 @@
           <div>
             <h5 class="w-auto legend">Members:</h5>
           </div>
-          <div class="addMemberBlock mx-4 my-4" id="addMem">
-            
-            
+          <div class="addMemberBlock mx-4 my-4">
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
+            <span class="modal-header my-2 mx-2 addMember">
+              <span class="modal-title">huzaifarehan001@gmail.com</span>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </span>
           </div>
           <div class="memberContent">
             <div class="memberContent1">
@@ -139,7 +161,7 @@
             </div>
             <div>
               <div class="my-5">
-                <button type="button" class="ownerViewBtn btn btn-primary" onclick="addMember()">Add</button>
+                <button type="button" class="ownerViewBtn btn btn-primary">Add</button>
               </div>
               <div class="my-5">
                 <button type="button" id="deleteTeam" class="ownerViewBtn mb-3 btn btn-primary">Delete Team</button>
@@ -157,7 +179,7 @@
 
 
   <!-- Optional JavaScript; choose one of the two! -->
-  <script src="./javascript/index.js"></script>
+  <script src="./javascript/ownerview.js"></script>
   
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
@@ -172,7 +194,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
     crossorigin="anonymous"></script>
-    <!-- <script src="./javascript/index.js"></script> -->
 
 </body>
 
