--- a/teams.html
+++ b/teams.html
@@ -60,33 +60,37 @@
         aria-labelledby="" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content" id="popUp">
-            <div class="modal-header popUp">
-              <h5 class="modal-title" id="">Create New Team</h5>
-            </div>
 
-            <div id="popupBody" class="modal-body">
-              <div class="my-3">
-                <input type="text" class="bottomLine form-control" id="formGroupExampleInput" placeholder="Team Name">
+            <form id="teamCreationForm">
+              <div class="modal-header popUp">
+                <h5 class="modal-title" id="">Create New Team</h5>
               </div>
-              <div id="category" class="form-floating my-3">
-                <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
-                  <option selected>Web</option>
-                  <option value="1">Mobile</option>
-                  <option value="2">Desktop</option>
-                  <option value="3">IOS</option>
-                </select>
-                <label for="floatingSelect">Category</label>
+  
+              <div id="popupBody" class="modal-body">
+                <div class="my-3">
+                  <input type="text" class="bottomLine form-control" required id="teamName" placeholder="Team Name">
+                </div>
+                <div id="categories" class="form-floating my-3">
+                  <select class="form-select" id="category" required aria-label="Floating label select example">
+                    <option selected value="Web">Web</option>
+                    <option value="Mobile">Mobile</option>
+                    <option value="Desktop">Desktop</option>
+                    <option value="IOS">IOS</option>
+                  </select>
+                  <label for="floatingSelect">Category</label>
+                </div>
+                <div class="my-3">
+                  <input type="text" class="bottomLine form-control" required id="member" placeholder="Members (type email)">
+                </div>
               </div>
-              <div class="my-3">
-                <input type="text" class="bottomLine form-control" id="formGroupExampleInput2" placeholder="Members (type email)">
+  
+              <div class="mb-3 modal-footer popUp">
+                <button type="button" onclick="createTeam()" class="btn btn-primary">Create</button>
+                <button type="button" id="popupClearButton" class="btn btn-secondary"
+                  data-bs-dismiss="modal">Cancel</button>
               </div>
-            </div>
-
-            <div class="mb-3 modal-footer popUp">
-              <button type="button" onclick="nice()" class="btn btn-primary">Create</button>
-              <button type="button" id="popupClearButton" class="btn btn-secondary"
-                data-bs-dismiss="modal">Cancel</button>
-            </div>
+            </form>
+            
           </div>
         </div>
       </div>
@@ -112,7 +116,7 @@
     integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
     crossorigin="anonymous"></script>
 
-  <!-- <script src="./javascript/index.js"></script> -->
+  <script src="./javascript/index.js"></script>
 </body>
 
 </html>
